IntelliJ based reformat